# hermes

./: .env.example  AGENTS.md  COMPARISON_CLAW_CODE.md  CONTRIBUTING.md  DOCUMENTATION.md  IMPROVEMENT_PLAN.md  LOCAL_FIRST.md  README.md  REBRANDING_AIZEN.md  REFACTORING_PLAN.md  REFACTORING_STRATEGY.md  REMOTE_BRIDGE_CONCEPT.md  ROADMAP.md  SPRINT1_COMPLETE.md  SPRINT3_COMPLETE.md  TASKS.md  TASKS_DETAILED.md  aizen  aizen_config.py  aizen_health.py  aizen_logging.py  aizen_resilience.py  avatar.md  cli.py  design.md  hermes_config.py  hermes_health.py  hermes_logging.py  hermes_resilience.py  orchestration.py  pyproject.toml  repl.py  requirements.txt  run_agent.py  sdk.py  server.py  setup-aizen.sh  shutdown.py  supervisor.py  test_distillation.py  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
.sisyphus/: task-a1-audit-report.md  task-c1-inventory-report.md  task-c2-analysis-report.md
acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: anthropic_adapter.py  auxiliary_client.py  context_references.py  copilot_acp_client.py  display.py  insights.py  model_metadata.py  models_dev.py  prompt_builder.py  redact.py  skill_commands.py  skill_utils.py  smart_model_routing.py
aizen_cli/: __init__.py  auth.py  banner.py  callbacks.py  checklist.py  claw.py  cli_fast.py  colors.py  commands.py  config.py  copilot_auth.py  cron.py  curses_ui.py  dashboard_tui.py  default_soul.py  doctor.py  env_loader.py  gateway.py  main.py  mcp_config.py  model_switch.py  models.py  pairing.py  plugins.py  plugins_cmd.py  profiles.py  runtime_provider.py  setup.py  setup_wizard.py  skills_config.py  skills_hub.py  skin_engine.py  status.py  tools_config.py  uninstall.py  webhook.py
assets/: jellyfish.ppp  logo.ppp
bridge/: __init__.py  client.py  config.py  server.py  types.py
cli/: memory_cli.py
core/: __init__.py  aizen_constants.py  aizen_state.py  aizen_time.py  hermes_state.py  hermes_time.py  utils.py
cron/: __init__.py  jobs.py  scheduler.py
dashboard/: index.html
docker/: SOUL.md  entrypoint.sh
docs/: API.md  DEAD_CODE_ANALYSIS.md  DEPLOYMENT.md  HOOKS.md  IMPLEMENTATION.md  README.md  acp-setup.md  honcho-integration-spec.md
environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  hermes_base_env.py  patches.py  tool_context.py  web_research_env.py
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  hooks.py  mirror.py  pairing.py  rate_limiter.py  run.py  session.py  status.py  sticker_cache.py
hermes_cli/: auth.py  banner.py  callbacks.py  claw.py  cli_fast.py  commands.py  config.py  doctor.py  gateway.py  main.py  mcp_config.py  models.py  profiles.py  runtime_provider.py  setup.py  setup_wizard.py  skills_hub.py  skin_engine.py  status.py  tools_config.py  uninstall.py  webhook.py
knowledge/: memory_context.py  memory_store.py
lifecycle/: __init__.py  background_agents.py  distillation.py  hooks.py  observability.py  orchestration.py  parallel_pool.py
optional-skills/: DESCRIPTION.md
routing/: __init__.py  intent_gate.py
scripts/: discord-voice-doctor.py  install.sh  kill_modal.sh  migrate_hermes_to_aizen.py  release.py  sample_and_compress.py  uninstall.sh
tests/: conftest.py  test_860_dedup.py  test_agent_loop.py  test_agent_loop_tool_calling.py  test_agent_loop_vllm.py  test_aizen_config.py  test_aizen_health.py  test_aizen_logging.py  test_aizen_resilience.py  test_aizen_state.py  test_anthropic_error_handling.py  test_anthropic_oauth_flow.py  test_anthropic_provider_persistence.py  test_api_key_providers.py  test_atomic_json_write.py  test_atomic_yaml_write.py  test_auth_codex_provider.py  test_auth_nous_provider.py  test_auxiliary_config_bridge.py  test_bridge.py  test_cli_approval_ui.py  test_cli_background_tui_refresh.py  test_cli_extension_hooks.py  test_cli_init.py  test_cli_loading_indicator.py  test_cli_mcp_config_watch.py  test_cli_new_session.py  test_cli_plan_command.py  test_cli_prefix_matching.py  test_cli_preloaded_skills.py  test_cli_provider_resolution.py  test_cli_retry.py  test_cli_secret_capture.py  test_cli_skin_integration.py  test_cli_status_bar.py  test_cli_tools_command.py  test_codex_execution_paths.py  test_codex_models.py  test_compression_persistence.py  test_config_env_expansion.py  (+37 more)
tools/: __init__.py  approval.py  browser_camofox.py  browser_tool.py  bughunter.py  checkpoint_manager.py  circuit_breaker.py  code_execution_tool.py  credential_files.py  credential_storage.py  delegate_tool.py  env_passthrough.py  file_operations.py  file_tools.py  hash_anchored_edit.py  hash_edit.py  lsp_client.py  mcp_oauth.py  mcp_serve.py  mcp_tool.py  memory_tool.py  model_tools.py  opencode_tool.py  process_registry.py  registry.py  rewind_store.py  rl_training_tool.py  send_message_tool.py  session_search_tool.py  (+13 more)
(+425 files in other folders)
