     1|[build-system]
     2|requires = ["setuptools>=61.0"]
     3|build-backend = "setuptools.build_meta"
     4|
     5|[project]
     6|name = "hermes-agent"
     7|version = "0.6.0"
     8|description = "The self-improving AI agent — creates skills from experience, improves them during use, and runs anywhere"
     9|readme = "README.md"
    10|requires-python = ">=3.11"
    11|authors=*** name = "Nous Research" }]
    12|license = { text = "MIT" }
    13|dependencies = [
    14|  # Core — pinned to known-good ranges to limit supply chain attack surface
    15|  "openai>=2.21.0,<3",
    16|  "anthropic>=0.39.0,<1",
    17|  "python-dotenv>=1.2.1,<2",
    18|  "fire>=0.7.1,<1",
    19|  "httpx>=0.28.1,<1",
    20|  "rich>=14.3.3,<15",
    21|  "tenacity>=9.1.4,<10",
    22|  "pyyaml>=6.0.2,<7",
    23|  "requests>=2.33.0,<3",  # CVE-2026-25645
    24|  "jinja2>=3.1.5,<4",
    25|  "pydantic>=2.12.5,<3",
    26|  # Interactive CLI (prompt_toolkit is used directly by cli.py)
    27|  "prompt_toolkit>=3.0.52,<4",
    28|  # Tools
    29|  "exa-py>=2.9.0,<3",
    30|  "firecrawl-py>=4.16.0,<5",
    31|  "parallel-web>=0.4.2,<1",
    32|  "fal-client>=0.13.1,<1",
    33|  # Web search fallback (free, no API key needed)
    34|  "ddgs>=9.0.0",
    35|  # Text-to-speech (Edge TTS is free, no API key needed)
    36|  "edge-tts>=7.2.7,<8",
    37|  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
    38|  "PyJWT[crypto]>=2.12.0,<3",  # CVE-2026-32597
    39|]
    40|
    41|[project.optional-dependencies]
    42|modal = ["modal>=1.0.0,<2"]
    43|daytona = ["daytona>=0.148.0,<1"]
    44|dev = ["pytest>=9.0.2,<10", "pytest-asyncio>=1.3.0,<2", "pytest-xdist>=3.0,<4", "mcp>=1.2.0,<2"]
    45|messaging = ["python-telegram-bot>=22.6,<23", "discord.py[voice]>=2.7.1,<3", "aiohttp>=3.13.3,<4", "slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4"]
    46|cron = ["croniter>=6.0.0,<7"]
    47|slack = ["slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4"]
    48|matrix = ["matrix-nio[e2e]>=0.24.0,<1"]
    49|cli = ["simple-term-menu>=1.0,<2"]
    50|tts-premium = ["elevenlabs>=1.0,<2"]
    51|voice = [
    52|  # Local STT pulls in wheel-only transitive deps (ctranslate2, onnxruntime),
    53|  # so keep it out of the base install for source-build packagers like Homebrew.
    54|  "faster-whisper>=1.0.0,<2",
    55|  "sounddevice>=0.4.6,<1",
    56|  "numpy>=1.24.0,<3",
    57|]
    58|pty = [
    59|  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
    60|  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
    61|]
    62|honcho = ["honcho-ai>=2.0.1,<3"]
    63|mcp = ["mcp>=1.2.0,<2"]
    64|homeassistant = ["aiohttp>=3.9.0,<4"]
    65|sms = ["aiohttp>=3.9.0,<4"]
    66|acp = ["agent-client-protocol>=0.8.1,<0.9"]
    67|dingtalk = ["dingtalk-stream>=0.1.0,<1"]
    68|feishu = ["lark-oapi>=1.5.3,<2"]
    69|rl = [
    70|  "atroposlib @ git+https://github.com/NousResearch/atropos.git",
    71|  "tinker @ git+https://github.com/thinking-machines-lab/tinker.git",
    72|  "fastapi>=0.104.0,<1",
    73|  "uvicorn[standard]>=0.24.0,<1",
    74|  "wandb>=0.15.0,<1",
    75|]
    76|yc-bench = ["yc-bench @ git+https://github.com/collinear-ai/yc-bench.git ; python_version >= '3.12'"]
    77|all = [
    78|  "hermes-agent[modal]",
    79|  "hermes-agent[daytona]",
    80|  "hermes-agent[messaging]",
    81|  "hermes-agent[matrix]",
    82|  "hermes-agent[cron]",
    83|  "hermes-agent[cli]",
    84|  "hermes-agent[dev]",
    85|  "hermes-agent[tts-premium]",
    86|  "hermes-agent[slack]",
    87|  "hermes-agent[pty]",
    88|  "hermes-agent[honcho]",
    89|  "hermes-agent[mcp]",
    90|  "hermes-agent[homeassistant]",
    91|  "hermes-agent[sms]",
    92|  "hermes-agent[acp]",
    93|  "hermes-agent[voice]",
    94|  "hermes-agent[dingtalk]",
    95|  "hermes-agent[feishu]",
    96|]
    97|
    98|[project.scripts]
    99|hermes = "hermes_cli.main:main"
   100|hermes-agent = "run_agent:main"
   101|hermes-acp = "acp_adapter.entry:main"
   102|
   103|[tool.setuptools]
   104|py-modules = ["run_agent", "model_tools", "toolsets", "batch_runner", "trajectory_compressor", "toolset_distributions", "cli", "hermes_constants", "hermes_state", "hermes_time", "rl_cli", "utils"]
   105|
   106|[tool.setuptools.packages.find]
   107|include = ["agent", "tools", "tools.*", "hermes_cli", "gateway", "gateway.*", "cron", "honcho_integration", "acp_adapter"]
   108|
   109|[tool.pytest.ini_options]
   110|testpaths = ["tests"]
   111|markers = [
   112|    "integration: marks tests requiring external services (API keys, Modal, etc.)",
   113|    "load: marks load/performance tests (run separately from unit tests)",
   114|]
   115|addopts = "-m 'not integration' -n auto"
   116|